--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,8 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.3.0-beta01"
+    def nav_version = "2.3.0-rc01"
 
-    // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
